<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/Linen_F7E">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="291dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/mystery"
        android:translationY="70dp">

    </ImageView>

    <EditText
        android:id="@+id/txtName"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:maxLength="20"

        android:hint="@string/name_box"
        android:textColor="@color/EnglishViolet_574"
        android:textColorHint="@color/EnglishViolet_574"
        android:textStyle="bold"
        android:translationY="100dp"
        android:inputType="text">

    </EditText>

    <EditText
        android:id="@+id/txtAge"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:maxLength="2"

        android:hint="@string/age_box"
        android:textColor="@color/EnglishViolet_574"
        android:textColorHint="@color/EnglishViolet_574"
        android:textStyle="bold"
        android:translationY="100dp"
        android:inputType="number">

    </EditText>

    <Button
        android:id="@+id/btnNext"

        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:backgroundTint="@color/MaximumYellow_F6B"
        android:text="@string/btn_name"
        android:textStyle="bold"
        android:textSize="18dp"
        android:translationY="200dp"
        app:cornerRadius="15dp">

    </Button>


</LinearLayout>