<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@color/Linen_F7E">

    <TextView
        android:text="@string/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="left"
        android:textSize="30dp"
        android:textStyle="bold"
        android:translationY="70dp"
        android:layout_marginLeft="30dp">

    </TextView>

    <TextView
        android:id="@+id/txtName2"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:textColor="@color/FireOpal_EB5"
        android:layout_gravity="right"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginRight="30dp"
        android:translationX="-30dp">

    </TextView>

    <TextView
        android:text="@string/txtLuckyNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="28dp"
        android:textStyle="bold"
        android:layout_marginLeft="3dp"
        android:translationY="200dp">

    </TextView>

    <TextView
        android:id="@+id/txtLuckyNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/FireOpal_EB5"
        android:textSize="60dp"
        android:textStyle="bold"
        android:translationY="300dp"
        >

    </TextView>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:backgroundTint="@color/MaximumYellow_F6B"
        android:text="@string/btn_back"
        android:textStyle="bold"
        android:textSize="18dp"
        android:translationY="410dp"
        app:cornerRadius="15dp">

    </Button>

</LinearLayout>